2007-12-08  Petr Mikulik  <mikulik@physics.muni.cz>

	New options "front" and "back" to "set colorbox" to let the box be
	drawn either after or below the image or surface.

	* src/gadgets.h src/gadgets.c: New "layer" field in color_box_struct.

	* src/graphics.c src/graph3d.c: Draw the colorbox at expected layers.

	* src/save.c src/set.c src/show.c src/tables.h src/tables.c
	docs/gnuplot.doc: The other necessary changes.

2007-12-01  Thomas Orgis  <sobukus@users.sourceforge.net>

	* src/gplt_x11.c (process_configure_notify_event):  Test for failure of
	window resize, and do not loop indefinitely trying to resize. Fixes
	infinite loop problem on ion and fluxbox window managers.
	Bug #1836959 #1614928

2007-11-25  Johannes Zellner  <johannes@zellner.org>

	* term/emf.trm: implemented pm3d and point types according to the
	suggestion in term/README.  (2006-12-07 patch to CVS trunk)

2007-11-25  Ethan A Merritt  <merritt@u.washington.edu>

	* term/estimate.trm: Never return a zero size estimate for a
	non-empty string. Promote fraction characters to size 1.

2007-11-25  Vladimir  <qva@users.sourceforge.net>

	* term/svg.trm (SVG_init): Correct encoding names to koi8-r, koi8-u.
	Bug #1838066

2007-11-23  Ethan A Merritt  <merritt@u.washington.edu>

	* term/fig.trm (FIG_boxfill):  Update current color before drawing.
	Bug #1837187

2007-11-22  Morten MacFly  <mortenmacfly@users.sourceforge.net>

	* config/config.nt: #define vsnprintf

2007-11-21  Allin Cottrell  <cottrell@wfu.edu>

	* term/emf.trm (EMF_filled_polygon): Do not alter original color
	when processing filled areas with opacity < 1.0

2007-11-20  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm (RememberFont): Revert patch of 2007-10-23
	Parenthesized font names are not compatible with enhanced text mode,
	and anyhow PostScript fontnames should not contain any spaces.

2007-11-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (enhanced_recursion):  Do not allow the '}' character in a